--- a/Back-End Project/Areas/Admin/Views/shared/_AdminLayout.cshtml
+++ b/Back-End Project/Areas/Admin/Views/shared/_AdminLayout.cshtml
@@ -29,6 +29,7 @@
                     </button>
                 </div>
             </div>
+
             <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
                 <ul class="navbar-nav mr-lg-4 w-100">
                     <li class="nav-item nav-search d-none d-lg-block w-100">
@@ -38,7 +39,8 @@
                                     <i class="mdi mdi-magnify"></i>
                                 </span>
                             </div>
-                            <input type="text" class="form-control" placeholder="Search now" aria-label="search" aria-describedby="search">
+                            <h2 class="text-danger" style="font-size:20px;font-weight:500;">Only admin can use update and delete actions</h2>
+
                         </div>
                     </li>
                 </ul>
@@ -157,11 +159,15 @@
                     </li>
                 </ul>
                 <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
-                    <span class="mdi mdi-menu"></span>
+                    <span class="mdi mdi-menu">
+
+                    </span>
                 </button>
+
             </div>
         </nav>
         <!-- partial -->
+
         <div class="container-fluid page-body-wrapper">
             <!-- partial:../../partials/_sidebar.html -->
             <nav class="sidebar sidebar-offcanvas" id="sidebar">
@@ -180,38 +186,48 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Blogs" asp-action="Index">
-                            <i class="mdi mdi-chart-pie menu-icon"></i>
-                            <span class="menu-title">Blogs</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="Teacher" asp-action="Index">
-                            <i class="mdi mdi-access-point-network menu-icon"></i>
-                            <span class="menu-title">Teacher</span>
-                        </a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" asp-controller="Category" asp-action="Index">
-                            <i class="mdi mdi-grid-large menu-icon"></i>
+                            <i class="mdi mdi-chart-pie menu-icon"></i>
                             <span class="menu-title">Category</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Users" asp-action="Index">
+                        <a class="nav-link" asp-controller="Event" asp-action="Index">
+                            <i class="mdi mdi-access-point-network menu-icon"></i>
+                            <span class="menu-title">Event</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Speaker" asp-action="Index">
+                            <i class="mdi mdi-grid-large menu-icon"></i>
+                            <span class="menu-title">Speaker</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Teacher" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
-                            <span class="menu-title">Users</span>
+                            <span class="menu-title">Teacher</span>
                         </a>
                     </li>      <li class="nav-item">
-                        <a class="nav-link" asp-controller="Event" asp-action="Index">
+                        <a class="nav-link" asp-controller="SocialMedia" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
-                            <span class="menu-title">Events</span>
+                            <span class="menu-title">SocialMedia</span>
                         </a>
                     </li>
                     </li>      <li class="nav-item">
-                        <a class="nav-link" asp-controller="Speaker" asp-action="Index">
+                        <a class="nav-link" asp-controller="Skill" asp-action="Index">
                             <i class="mdi mdi-account menu-icon"></i>
-                            <span class="menu-title">Speakers</span>
+                            <span class="menu-title">Skill</span>
+                        </a>
+                    </li>   </li>      <li class="nav-item">
+                        <a class="nav-link" asp-controller="User" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">User</span>
+                        </a>
+                    </li>   </li>   </li>      <li class="nav-item">
+                        <a class="nav-link" asp-controller="Blog" asp-action="Index">
+                            <i class="mdi mdi-account menu-icon"></i>
+                            <span class="menu-title">Blog</span>
                         </a>
                     </li>
 
@@ -220,7 +236,6 @@
             <div class="main-panel">
                 <div class="content-wrapper" style="padding:10px;">
                     <div class="row">
-
 
                         @RenderBody()
                     </div>
