--- a/Back-End Project/Views/Home/Index.cshtml
+++ b/Back-End Project/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@using Back_End_Project.Models
+﻿@using Back_End_Project.Areas.Admin.ViewModels
+@using Back_End_Project.Models
 
-@model List<Course>
+@model HomeControllerViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/shared/_Layout.cshtml";
@@ -113,7 +114,7 @@
             </div>
         </div>
         <div class="row">
-            @foreach (Course course in Model)
+            @foreach (Course course in Model.courses)
             {
                <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-course">
@@ -198,7 +199,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="section-title">
-                    <img src="img/icon/section.png" alt="section-title">
+                    <img src="~/img/icon/section.png" alt="section-title">
                     <h2>UPCOMMING EVENTS</h2>
                 </div>
             </div>
@@ -239,38 +240,26 @@
                 </div>
             </div>
             <div class="col-md-6 col-sm-12 col-xs-12">
+                @foreach (Event eventt in Model.events)
+                {
+                    
                 <div class="single-event mb-35">
                     <div class="event-img">
-                        <a href="event-details.html"><img src="img/event/event2.jpg" alt="event"></a>
+                        <a asp-controller="Event" asp-action="Detail" asp-route-id="@eventt.Id"><img src="~/img/event/@eventt.Image" alt="event"></a>
                     </div>
                     <div class="event-content text-left">
-                        <h3>18 June 2017</h3>
-                        <h4><a href="event-details.html">DIGITAL MARKETING ANALYSIS</a></h4>
+                        <h3>@eventt.StartTime</h3>
+                        <h4><a asp-controller="Event" asp-action="Detail" asp-route-id="@eventt.Id">@eventt.Name</a></h4>
                         <ul>
-                            <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
+                            <li><i class="fa fa-clock-o"></i>@eventt.Duration</li>
                             <li><i class="fa fa-map-marker"></i>New Yourk City</li>
                         </ul>
                         <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
+                                <a class="default-btn" asp-controller="Event" asp-action="Detail" asp-route-id="@eventt.Id">join now</a>
                         </div>
                     </div>
                 </div>
-                <div class="single-event hidden-sm hidden-xs">
-                    <div class="event-img">
-                        <a href="event-details.html"><img src="img/event/event3.jpg" alt="event"></a>
-                    </div>
-                    <div class="event-content text-left">
-                        <h3>14 June 2017</h3>
-                        <h4><a href="event-details.html">UI & UX DESIGNER MEETUP</a></h4>
-                        <ul>
-                            <li><i class="fa fa-clock-o"></i>9.00 AM - 4.45 PM</li>
-                            <li><i class="fa fa-map-marker"></i>New Yourk City</li>
-                        </ul>
-                        <div class="event-content-right">
-                            <a class="default-btn" href="event-details.html">join now</a>
-                        </div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </div>
@@ -312,63 +301,29 @@
             </div>
         </div>
         <div class="row">
+            @foreach (Blog blog in Model.blogs)
+            {
+                
             <div class="col-md-4 col-sm-6 col-xs-12">
                 <div class="single-blog">
                     <div class="blog-img">
-                        <a href="blog-details.html"><img src="img/blog/blog1.jpg" alt="blog"></a>
+                        <a asp-controller="Blog" asp-action="Detail" asp-route-id="@blog.Id"><img src="~/img/blog/@blog.Image" alt="blog"></a>
                         <div class="blog-hover">
-                            <a href="blog-details.html"><i class="fa fa-link"></i></a>
+                                <a asp-controller="Blog" asp-action="Detail" asp-route-id="@blog.Id"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                     <div class="blog-content">
                         <div class="blog-top">
-                            <p>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</p>
+                            <p>@blog.Redactor  /  @blog.CreatedTime  /  <i class="fa fa-comments-o"></i> 4</p>
                         </div>
                         <div class="blog-bottom">
-                            <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-                            <a href="blog-details.html">read more</a>
+                            <h2><a asp-controller="Blog" asp-action="Detail" asp-route-id="@blog.Id">@blog.Description </a></h2>
+                                <a asp-controller="Blog" asp-action="Detail" asp-route-id="@blog.Id">read more</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-sm-6 col-xs-12">
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="blog-details.html"><img src="img/blog/blog2.jpg" alt="blog"></a>
-                        <div class="blog-hover">
-                            <a href="blog-details.html"><i class="fa fa-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="blog-content">
-                        <div class="blog-top">
-                            <p>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</p>
-                        </div>
-                        <div class="blog-bottom">
-                            <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-                            <a href="blog-details.html">read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 hidden-sm col-xs-12">
-                <div class="single-blog">
-                    <div class="blog-img">
-                        <a href="blog-details.html"><img src="img/blog/blog3.jpg" alt="blog"></a>
-                        <div class="blog-hover">
-                            <a href="blog-details.html"><i class="fa fa-link"></i></a>
-                        </div>
-                    </div>
-                    <div class="blog-content">
-                        <div class="blog-top">
-                            <p>By Alex  /  June 20, 2017  /  <i class="fa fa-comments-o"></i> 4</p>
-                        </div>
-                        <div class="blog-bottom">
-                            <h2><a href="blog-details.html">I must explain to you how all this a mistaken idea </a></h2>
-                            <a href="blog-details.html">read more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </div>
