--- a/Back-End Project/Views/Teacher/Index.cshtml
+++ b/Back-End Project/Views/Teacher/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Back_End_Project.Models
+@model List<Teacher>
 @{
     ViewData["Title"] = "Teacher";
     Layout = "~/Views/shared/_Layout.cshtml";
@@ -25,210 +26,27 @@
         <div class="teacher-area pt-150 pb-105">
             <div class="container">
                 <div class="row">
+                    @foreach (Teacher teacher in Model)
+            {
+                
                     <div class="col-md-3 col-sm-4 col-xs-12">
                         <div class="single-teacher mb-45">
                             <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher1.jpg" alt="teacher"></a>  
+                                <a asp-action="Detail" asp-route-id="@teacher.Id"><img src="~/img/teacher/@teacher.Image" alt="teacher"></a>  
                             </div>
                             <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">STUART KELVIN</a></h2>
-                                <h4>Associate Professor</h4>
+                            <h2><a asp-action="Detail" asp-route-id="@teacher.Id">@teacher.Name</a></h2>
+                                <h4>@teacher.Profession</h4>
                                 <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
+                                <li><a asp-action="Detail" asp-route-id="@teacher.Id"><i class="zmdi zmdi-facebook"></i></a></li>
+                                <li><a asp-action="Detail" asp-route-id="@teacher.Id"><i class="zmdi zmdi-pinterest"></i></a></li>
+                                <li><a asp-action="Detail" asp-route-id="@teacher.Id"><i class="zmdi zmdi-vimeo"></i></a></li>
+                                <li><a asp-action="Detail" asp-route-id="@teacher.Id"><i class="zmdi zmdi-twitter"></i></a></li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher2.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">eamily cristian</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher3.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">kevin williams</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher4.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">salina gomaze</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher5.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">JASMIN SMITH</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher6.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">STEPHEN FLEMING</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher7.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">JULIA WILLIAMS</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher8.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">NAIL ANDERSON</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher9.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">STUART KELVIN</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher10.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">STUART KELVIN</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher11.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">KEVIN WILLIAMS</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-4 col-xs-12">
-                        <div class="single-teacher mb-45">
-                            <div class="single-teacher-img">
-                                <a href="teacher-details.html"><img src="img/teacher/teacher12.jpg" alt="teacher"></a>  
-                            </div>
-                            <div class="single-teacher-content text-center">
-                                <h2><a href="teacher-details.html">SALINA GOMAZE</a></h2>
-                                <h4>Associate Professor</h4>
-                                <ul>
-                                    <li><a href="https://www.facebook.com/devitems/?ref=bookmarks"><i class="zmdi zmdi-facebook"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/devitemsllc/"><i class="zmdi zmdi-pinterest"></i></a></li>
-                                    <li><a href="#"><i class="zmdi zmdi-vimeo"></i></a></li>
-                                    <li><a href="https://twitter.com/devitemsllc"><i class="zmdi zmdi-twitter"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
+            }
                 </div>
             </div>
         </div>
