--- a/Back-End Project/Views/shared/_Layout.cshtml
+++ b/Back-End Project/Views/shared/_Layout.cshtml
@@ -12,19 +12,19 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/meanmenu.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/et-line-icon.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/material-design-iconic-font.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <link rel="stylesheet" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/css/animate.css">
+    <link rel="stylesheet" href="~/css/meanmenu.css">
+    <link rel="stylesheet" href="~/css/magnific-popup.css">
+    <link rel="stylesheet" href="~/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/css/et-line-icon.css">
+    <link rel="stylesheet" href="~/css/reset.css">
+    <link rel="stylesheet" href="~/css/ionicons.min.css">
+    <link rel="stylesheet" href="~/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" href="~/css/style.css">
+    <link rel="stylesheet" href="~/css/responsive.css">
+    <script src="~/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
     <!--[if lt IE 8]>
@@ -42,9 +42,17 @@
                     </div>
                     <div class="col-md-4 col-sm-4 col-xs-12">
                         <div class="header-top-right text-right">
+                            
                             <ul>
-                                <li><a href="login.html">login</a></li>
-                                <li><a href="signup.html">signup</a></li>
+                            @if(User.Identity.IsAuthenticated){
+
+                                <li><a asp-controller="Account" asp-action="Logout">logout</a></li>
+                            }else{
+
+                                <li><a asp-controller="Account" asp-action="Login">login</a></li>
+                                <li><a asp-controller="Account" asp-action="Register">signup</a></li>
+
+                            }
                             </ul>
                         </div>
                     </div>
@@ -56,7 +64,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="logo">
-                            <a href="index.html"><img src="img/logo/logo2.png" alt="eduhome" /></a>
+                            <a href="index.html"><img src="~/img/logo/logo2.png" alt="eduhome" /></a>
                         </div>
                     </div>
                     <div class="col-md-9 col-sm-9 col-xs-6">
@@ -68,42 +76,42 @@
                                         <li>
                                             <a href="index.html">Home</a>
                                             <ul>
-                                                <li><a href="index.html">Home One</a></li>
-                                                <li><a href="index-2.html">Home Two</a></li>
-                                                <li><a href="index-3.html">Home Three</a></li>
-                                                <li><a href="index-4.html">Home Four</a></li>
-                                                <li><a href="index-5.html">Home Five</a></li>
+                                                <li><a asp-controller="Home" asp-action="Index">Home One</a></li>
+                                                <li><a asp-controller="Home" asp-action="Index">Home Two</a></li>
+                                                <li><a asp-controller="Home" asp-action="Index">Home Three</a></li>
+                                                <li><a asp-controller="Home" asp-action="Index">Home Four</a></li>
+                                                <li><a asp-controller="Home" asp-action="Index">Home Five</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="about.html">About</a></li>
                                         <li>
                                             <a href="course.html">courses</a>
                                             <ul>
-                                                <li><a href="course.html">courses</a></li>
-                                                <li><a href="course-details.html">courses details</a></li>
+                                                <li><a asp-controller="Courses" asp-action="Index">courses</a></li>
+                                                <li><a asp-controller="Courses" asp-action="Index">courses details</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="event.html">event</a>
                                             <ul>
-                                                <li><a href="event.html">event</a></li>
-                                                <li><a href="event-left-side-bar.html">event left sidebar</a></li>
-                                                <li><a href="event-right-side-bar.html">event right sidebar</a></li>
-                                                <li><a href="event-details.html">event details</a></li>
+                                                <li><a asp-controller="Event" asp-action="Index">event</a></li>
+                                                <li><a asp-controller="Event" asp-action="Index">event left sidebar</a></li>
+                                                <li><a asp-controller="Event" asp-action="Index">event right sidebar</a></li>
+                                                <li><a asp-controller="Event" asp-action="Index">event details</a></li>
                                             </ul>
                                         </li>
                                         <li class="hidden-sm">
                                             <a href="teacher.html">teacher</a>
                                             <ul>
-                                                <li><a href="teacher.html">teacher</a></li>
-                                                <li><a href="teacher-details.html">teacher details</a></li>
+                                                <li><a asp-controller="Teacher" asp-action="Index">teacher</a></li>
+                                                <li><a asp-controller="Teacher" asp-action="Index">teacher details</a></li>
                                             </ul>
                                         </li>
                                         <li>
                                             <a href="blog.html">blog</a>
                                             <ul>
-                                                <li><a href="blog.html">blog</a></li>
-                                                <li><a href="blog-left-side-bar.html">blog left sidebar</a></li>
+                                                <li><a asp-controller="Blog" asp-action="Index">blog</a></li>
+                                                <li><a asp-controller="Blog" asp-action="Index">blog left sidebar</a></li>
                                                 <li><a href="blog-right-side-bar.html">blog righ sidebar</a></li>
                                                 <li><a href="blog-details.html">blog details</a></li>
                                             </ul>
@@ -184,7 +192,7 @@
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="single-widget pr-60">
                             <div class="footer-logo pb-25">
-                                <a href="index.html"><img src="img/logo/footer-logo.png" alt="eduhome"></a>
+                                <a asp-controller="Home" asp-action="Index"><img src="~/img/logo/footer-logo.png" alt="eduhome"></a>
                             </div>
                             <p>I must explain to you how all this mistaken idea of denoung pleure and praising pain was born and give you a coete account of the system. </p>
                             <div class="footer-social">
@@ -203,7 +211,7 @@
                             <ul>
                                 <li><a href="#">addmission</a></li>
                                 <li><a href="#">Academic Calender</a></li>
-                                <li><a href="event.html">Event List</a></li>
+                                <li><a asp-controller="Event" asp-action="Index">Event List</a></li>
                                 <li><a href="#">Hostel &amp; Dinning</a></li>
                                 <li><a href="#">TimeTable</a></li>
                             </ul>
@@ -213,11 +221,11 @@
                         <div class="single-widget">
                             <h3>useful links</h3>
                             <ul>
-                                <li><a href="course.html">our courses</a></li>
-                                <li><a href="about.html">about us</a></li>
-                                <li><a href="teacher.html">teachers &amp; faculty</a></li>
+                                <li><a asp-controller="Courses" asp-action="Index">our courses</a></li>
+                                <li><a asp-controller="About" asp-action="Index">about us</a></li>
+                                <li><a asp-controller="Teacher" asp-action="Index">teachers &amp; faculty</a></li>
                                 <li><a href="#">teams &amp; conditions</a></li>
-                                <li><a href="event.html">our events</a></li>
+                                <li><a asp-controller="Event" asp-action="Index">our events</a></li>
                             </ul>
                         </div>
                     </div>
@@ -244,16 +252,16 @@
     </footer>
     <!-- Footer End -->
 
-    <script src="js/vendor/jquery-1.12.0.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.meanmenu.js"></script>
-    <script src="js/jquery.magnific-popup.js"></script>
-    <script src="js/ajax-mail.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.mb.YTPlayer.js"></script>
-    <script src="js/jquery.nicescroll.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="~/js/vendor/jquery-1.12.0.min.js"></script>
+    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/jquery.meanmenu.js"></script>
+    <script src="~/js/jquery.magnific-popup.js"></script>
+    <script src="~/js/ajax-mail.js"></script>
+    <script src="~/js/owl.carousel.min.js"></script>
+    <script src="~/js/jquery.mb.YTPlayer.js"></script>
+    <script src="~/js/jquery.nicescroll.min.js"></script>
+    <script src="~/js/plugins.js"></script>
+    <script src="~/js/main.js"></script>
 </body>
 
 <!-- Mirrored from demo.devitems.com/eduhome/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 21 Jun 2020 19:41:25 GMT -->
